<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titeltext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textSize="35sp"
        android:text="@string/house_list_titel" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="639dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/example1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:text="@string/house_list_example1" />

            <TextView
                android:id="@+id/example2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:text="@string/house_list_example2" />

            <TextView
                android:id="@+id/example3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:text="@string/house_list_example3" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/kz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:textColor="@color/black"
            android:text="Қазақша  |" />

        <TextView
            android:id="@+id/ru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:textColor="@color/black"
            android:text="Русский  |" />

        <TextView
            android:id="@+id/en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:textColor="@color/black"
            android:text="English" />

    </LinearLayout>
</LinearLayout>