<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titeltext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sale_form_titel"
        android:textColor="@color/black"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/qr_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins"
        android:text="@string/sale_form_qr_help"
        android:textAlignment="center"
        android:textColor="#808080"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/qr"
        android:layout_width="match_parent"
        android:layout_height="228dp"
        android:layout_marginTop="15dp"
        app:srcCompat="@drawable/qrcode1" />

    <TextView
        android:id="@+id/code_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins"
        android:text="@string/sale_form_code_help"
        android:textAlignment="center"
        android:textColor="#808080"
        android:textSize="15sp" />

    <Button
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:backgroundTint="#B0B0B0"
        android:fontFamily="sans-serif"
        android:text="8882123"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="20dp"
        android:gravity="center_horizontal|bottom"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/kz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:fontFamily="@font/poppins"
            android:text="Қазақша  |"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/ru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:fontFamily="@font/poppins"
            android:text="Русский  |"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:fontFamily="@font/poppins"
            android:text="English"
            android:textColor="@color/black" />
    </LinearLayout>
</LinearLayout>