<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
             android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205"
        app:srcCompat="@drawable/pay_frame1" />

    <TextView
        android:id="@+id/titelframe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_list_titel_form"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/titelpaytext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/pay_list_titel"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.176" />

    <TextView
        android:id="@+id/cardnumbertext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="232dp"
        android:text="@string/pay_list_card_number"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/titelpaytext"
        app:layout_constraintVertical_bias="0.202" />

    <EditText
        android:id="@+id/cardnumber"
        android:layout_width="280dp"
        android:layout_height="41dp"
        android:textColor="@color/black"
        android:layout_marginBottom="280dp"
        android:ems="10"
        android:inputType="number"
        android:hint="1234 3223 4562 5642"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/cardnumbertext"
        app:layout_constraintVertical_bias="0.239" />

    <EditText
        android:id="@+id/datecard"
        android:layout_width="136dp"
        android:textColor="@color/black"
        android:layout_height="47dp"
        android:layout_marginBottom="168dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/pay_list_card_date"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/cardnumber"
        app:layout_constraintVertical_bias="0.114" />

    <EditText
        android:id="@+id/cvv"
        android:layout_width="136dp"
        android:layout_height="47dp"
        android:layout_marginBottom="168dp"
        android:textColor="@color/black"
        android:ems="10"
        android:hint="123"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toEndOf="@+id/datecard"
        app:layout_constraintTop_toBottomOf="@+id/cardnumber"
        app:layout_constraintVertical_bias="0.114" />

    <Button
        android:id="@+id/paybutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Оплатить"
        android:backgroundTint="@color/greenui"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/cardnumber"
        app:layout_constraintVertical_bias="0.269" />

    <TextView
        android:id="@+id/payammounttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:text="К оплате: 25.000.000 KZ"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/paybutton"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_list_cancel"
        android:backgroundTint="@color/greenui"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.484" />

</androidx.constraintlayout.widget.ConstraintLayout>